
New Features:

  * util-core: Add `c.t.concurrent.Scheduler.blockingTimeNanos` which tracks time spent doing
    blocking operations. ``RB_ID=828289``

  * util-core: Reduced allocations by 40% and latency by 18% of satisfying `Promises`.
    ``RB_ID=832816``

  * util-core: `c.t.util.NoStacktrace` is removed. Use `scala.util.control.NoStackTrace` instead.
    ``RB_ID=833188``

  * util-app: `com.twitter.finagle.util.LoadService` has been moved to
    `c.t.app.LoadService` and can now be used without needing a finagle-core
    dependency. ``RB_ID=829897``

  * util-cache: Adds support for Caffeine-style caches. ``RB_ID=833848``

API Changes:

  * util-core: `c.t.u.Bijection` is removed. use `c.t.bijection.Bijection`
    (https://github.com/twitter/bijection) instead. ``RB_ID=834383``

  * Builds are now only for Java 8 and Scala 2.11. See the
    `blog post <https://finagle.github.io/blog/2016/04/20/scala-210-and-java7/>`_
    for details. ``RB_ID=828898``

  * util-core: Deprecated method `Future.get()` has been removed because it made it
    too easy to hide blocking code. Replaced usage with the more explicit
    `com.twitter.util.Await.result(Future)`. ``RB_ID=833579``

  * util-core: Deprecated method `Future.get(Duration): Try` has been removed because it
    made it too easy to hide blocking code. Replaced usage with the more explicit
    `com.twitter.util.Await.result(Future.liftToTry)`. ``RB_ID=836066``

  * util-core: Deprecated methods `Future.isReturn` and `Future.isThrow` have been
    removed because they made it too easy to hide blocking code. Replaced usage with
    the more explicit `Await.result(Future.liftToTry).isReturn` and
    `Await.result(Future.liftToTry).isThrow`. ``RB_ID=837329``

Bug Fixes:

  * util-core: AsyncMeter had a bug where if the burst size was smaller than
    the number of disbursed tokens, it would discard all of the tokens over
    the disbursal limit.  Changed to instead process tokens in the wait queue